scripts/nullness/annotator/url72c32f3c54_Quickhull3d_quickhull3d_tgz-pJ8-com_github_quickhull3d_SimpleExampleJ8.txt
../annotator/url72c32f3c54_Quickhull3d_quickhull3d_tgz-pJ8-com_github_quickhull3d_SimpleExampleJ8/src/com/github/quickhull3d/VertexList.java:2: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url72c32f3c54_Quickhull3d_quickhull3d_tgz-pJ8-com_github_quickhull3d_SimpleExampleJ8/src/com/github/quickhull3d/FaceList.java:2: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url72c32f3c54_Quickhull3d_quickhull3d_tgz-pJ8-com_github_quickhull3d_SimpleExampleJ8/src/com/github/quickhull3d/VertexList.java:67: error: cannot find symbol
    @Initializer public void addAll(Vertex vtx) {
     ^
  symbol:   class Initializer
  location: class VertexList
../annotator/url72c32f3c54_Quickhull3d_quickhull3d_tgz-pJ8-com_github_quickhull3d_SimpleExampleJ8/src/com/github/quickhull3d/FaceList.java:53: error: cannot find symbol
    @Initializer public void add(Face vtx) {
     ^
  symbol:   class Initializer
  location: class FaceList
Note: ../annotator/url72c32f3c54_Quickhull3d_quickhull3d_tgz-pJ8-com_github_quickhull3d_SimpleExampleJ8/src/com/github/quickhull3d/QuickHull3D.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
4 errors
